styles/1_header.styl
@import "0_variables.styl"

#header
  animation fadeInHeader 1.2s cubic-bezier(0.770, 0.000, 0.175, 1.000)
  animationFillMode forwards !important
  position relative
  z-index 99

  @media (max-width 480px)
    li > .q42-logo
      display none

  nav
    displayFlex()
    flexDirection column
    alignItems center
    padding 16px 0
    position relative
    z-index 5
  ul
    displayFlex()
    list-style none
    alignItems center
    padding 0

    @media (max-width: 480px)
      position absolute
      display block
      font-size 18px
      top 0
      width 150px
      margin-top 0
      transform translateX(-100%)
      transition ease-in-out -webkit-transform .2s
      flexDirection column
      li:first-child
        display block
  li
    font-size 24px
    margin 0 24px
    font-family monoFont

    @media (max-width: 480px)
      margin 0

    a
      font-weight 700
      text-decoration none
      border-bottom none
      color #315011
      smallcaps()
      &:hover
        color qColor

      @media (max-width: 480px)
        display block
        padding 10px
        color #000
        text-shadow none
        border-bottom solid 1px #ccc
        &:active
          background -webkit-linear-gradient(top, #ccc, #eee)
          color #555

.inverted #header
  li
    a
      color white
    a:hover
      color qColor

#buttons
  position absolute
  top 1rem
  right 1rem
  z-index 9

  .button
    width 32px
    height 32px
    overflow hidden
    border-radius 50%
    vertical-align middle
    cursor pointer
    background-color white
    transition ease opacity .25s
    margin-bottom .5rem
    &:hover
      opacity .7
    &:active
      transform scale(0.9)

  .explanation
    position absolute
    right 3rem
    font-size 12px
    color white
    text-shadow 0 1px rgba(0,0,0,.3)
    text-align right
    width 200px
    padding 5px 15px
    background rgba(0,0,0,.4)
    border-radius 15px
    transition linear .2s
    opacity 0
    pointer-events none

    a
      color white
      text-decoration underline

#mobile-menu-icon
  display none

  @media (max-width: 480px)
    display block
    position absolute
    left 1rem
    color black
    cursor pointer
    font-weight 500
    text-transform uppercase
    font-family monoFont
    padding 8px
    border solid 1px rgba(0,0,0,.8)
    border-radius 8px
    &:active
      transform scale(0.9)

@media (min-width 481px)
  nav > .q42-logo
    display none

.q42-logo
  animationFillMode forwards !important
  animation fadeInUpward 1s cubic-bezier(0.770, 0.000, 0.175, 1.000)

  a
    display inline-block
    position relative
    z-index 20
    pointer-events all
    border-bottom none

  object, img
    width 100px
    height 140px
    pointer-events none

    @media (max-width: 480px)
      height 110px

